# mandel

./: Cargo.toml  README.md
examples/: pico_args.rs
src/: adapters.rs  app_window.rs  error.rs  main.rs  message.rs
src/adapters/: ui.rs
src/adapters/ui/: coffee.rs  components.rs  iced.rs
src/adapters/ui/coffee/: components.rs  mandel_app.rs  mandel_builder.rs  mandel_canvas.rs  mandel_mvc.rs  type_converters.rs  window_size_state.rs
src/adapters/ui/components/: mandel_canvas.rs
src/adapters/ui/iced/: app.rs  app_bootstrapper.rs  app_builder.rs  app_settings.rs  iced_app_window.rs  mandel.rs  mandel_app.rs  mandel_app_factory.rs  mandel_bootstrapper.rs  mandel_builder.rs  mandel_message.rs  mandel_settings.rs  mandel_user_settings.rs
src/adapters/ui/iced/components/: mandel_canvas.rs
src/adapters/ui/ui_components/: mandel_canvas.rs
src/consts/: msg.rs
src/consts/msg/: en_us.rs
src/ports/: ui.rs
src/ports/ui/: app.rs  app_builder.rs  app_builder_trait.rs  app_trait.rs  components.rs  ui_components.rs
src/ports/ui/app/: size.rs  window.rs
src/ports/ui/app_trait/: pair.rs  window.rs
src/ports/ui/components/: canvas.rs  co_ord.rs  color.rs  point.rs  rect.rs  render.rs  view_context.rs
src/ports/ui/ui_components/: canvas_trait.rs  render_trait.rs  size.rs  view_trait.rs
