[package]
authors = ["u007d <b2b@humanenginuity.com>"]
categories = []
edition = "2018"
keywords = []
license = "MIT OR Apache-2.0"
name = "mandel"
readme = "README.md"
repository = "https://github.com/u007d/mandel"
version = "0.1.0"

[dependencies]
thiserror = "^1"
iced = { git = "https://github.com/hecrj/iced", branch = "master", features = ["canvas"] }
num-traits = "0.2.11"

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
